@@ -140,3 +140,6 @@ E: gcode@loowis.durge.org
 C: UK
 D: issue 158, 161, 163, 167, 175
 
+N: guppyism
+E: guppyism@gmail.com
+D: issue 187
