@@ -57,6 +57,9 @@ Bugfixes:
 
  * Issue #176: SO_REUSEADDR option is now used for passive data sockets to
    prevent server running out of free ports when using passive_ports directive.
+   
+ * Issue #187: match proftpd LIST format for files having last modification time
+   > 6 months.
 
 Major API changes since 0.6.0:
 
